--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.anhnguyen.multilevelauthenticator">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+    <uses-permission android:name="android.permission.USE_BIOMETRIC " />
 
     <application
         android:allowBackup="true"
@@ -20,9 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.PatternActivity">
-
-        </activity>
+        <activity android:name=".activity.PatternActivity"></activity>
+        <activity android:name=".activity.FingerprintActivity"></activity>
     </application>
 
 </manifest>
