--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
+    implementation 'com.github.jaiselrahman:FilePicker:1.1.1'
 }
