--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC " />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -21,8 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.PatternActivity"></activity>
-        <activity android:name=".activity.FingerprintActivity"></activity>
+        <activity android:name=".activity.PatternActivity" />
+        <activity android:name=".activity.FingerprintActivity" />
+        <activity android:name=".activity.PictureActivity"></activity>
     </application>
 
 </manifest>
